_site/docker/kuber-tutorial/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    # INGRESS.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: "/foo"
        backend:
          serviceName: kube-myapp-foo
          servicePort: 80
      - path: "/bar"
        backend:
          serviceName: kube-myapp-bar
          servicePort: 80
